@@ -1,3 +1,7 @@
+2012-08-23  Ingo Renner  <ingo.renner@dkd.de>
+
+	* Added date facet renderer (currently not completely implemented)
+
 2012-08-22  Ingo Renner  <ingo.renner@dkd.de>
 
 	* Added hierarchical facets
